# partiview

./: AAA_SOURCE_ME  HISTORY  Makefile  README.FIRST
cmed/: CMedit.C  CMedit.H  Makefile.in  README  cmed.C  cmed.H  cmedpanel.C  cmedpanel.H  cmedpanel.fl  colorpatch.H  hsb.c  sample.cmap
data/: README  chromadepth.cmap  colorbv.cmap  constes.cf  data2.cf  dome.vs  hip.cf  hipbright  hipbright.label  hipbright.speck  hipbrightv.speck  hipchroma  hipmotion  hiprv2speck  kira.cf  mass.cmap  mksnakeanim.pl  nclump.cmap  orion5.csh  orion5.sh  orion5.wf  primbin16.cf  primbin16.csh  primbin16.mk  snakeanim.speck  sol8.sgi  vector.speck  vectordemo.cf  warpincr.speck  warpproj.cf  wf2movie.awk
data/constes/: and.cab  and.cdf  ant.cab  ant.cdf  aps.cab  aps.cdf  aql.cab  aql.cdf  aqr.cab  aqr.cdf  ara.cab  ara.cdf  ari.cab  ari.cdf  aur.cab  aur.cdf  boo.cab  boo.cdf  cae.cab  cae.cdf  cam.cab  cam.cdf  cap.cab  cap.cdf  car.cab  car.cdf  cas.cab  cas.cdf  cen.cab  cen.cdf  cep.cab  cep.cdf  cet.cab  cet.cdf  cha.cab  cha.cdf  cir.cab  cir.cdf  cma.cab  cma.cdf  (+140 more)
data/maya/: mayaobj.cf  slevy.sgi  stuart.scene
doc/: Makefile  ideas1.txt  partiview-1.html  partiview-2.html  partiview-3.html  partiview-4.html  partiview-5.html  partiview-6.html  partiview-7.html  partiview-8.html  partiview-9.html  partiview.html  partiview.sgml  partiview.txt
doc/iau208/: Makefile  REFERENCE  newpasp.sty  paper.txt  partiview.tex
nemo/: README  p128.cf  p128.tab  snapspecks.c
scripts/: k2kira  kira2k  mkcirclepath  mkmovie  mksphere  msnapper  pb2parti  pb2stats  tfm.pl  tilesnap  timesnapper  vect2obj
src/: COPYING.geomview  Fl_Log_Slider.H  Fl_Log_Slider.cxx  Fl_Scroll_Thin.H  Fl_Scroll_Thin.cxx  Gview.H  Gview.cc  Hist.H  Hist.cc  LICENSE  Makedepend.partiszg  Makefile.in  Makefile.partiszg  Makefile.vd32  Makefile.vd64  Plot.H  Plot.cc  README  aclocal.m4  acx_pthread.m4  async.c  cat_model.cc  cat_model.h  cat_modelutil.cc  cat_modelutil.h  config.h.in  config.h.sgi  configure  configure.in  conste.cc  conste.h  elumens.cc  findfile.c  findfile.h  flhack.cc  flhack.h  futil.c  futil.h  galaxyorbit.h  genericslider.H  (+53 more)
starlab/: README
tutor/: Makefile  README  memdemo.c
